test/should-fail/vsgc1442sub.f3
/**
 * @subtest
 */

public var pub = 0;
public-read var read = 2;
var myvar = 4;
